# IF_I_WIFI

./: .gitignore  README.md  TESTING.md  bridge_client.py  calibrate_presence.py  csi_mac.py  csi_ml.py  csi_presence.py  csi_processor.py  csi_receiver.py  decision_engine.py  enhanced_presence.py  esp32_csi_bridge.ino  feasibility_bridge.ino  feasibility_test.ino  feasibility_test.py  monitor_presence.py  phase_sanitizer.py  rssi_ml.py  run_parallel.sh  secrets 2.h  test_csi_processor.py  test_detectors.py  test_ml_classifiers.py  test_multi_ap.py  test_ruview_features.py
.sisyphus/plans/: ml-classifiers.md
.sisyphus/run-continuation/: ses_1d5732ca3ffe4gnE0DmLnEL9QC.json  ses_1fdb5e62effefVuic96JKm7Eer.json
csi/: blob_cli.py  blob_regressor.py  breathing_ml.py  classifier.py  csi_ble.py  csi_mac.py  csi_ml.py  csi_model.joblib  csi_plot.py  csi_processor.py  csi_record.py  diagnose_model.py  doppler.py  esp32_parser.py  features.py  ha_bridge.py  multi_ap.py  rssi_features.py  seat_mapper.py  sleep.py  ws_client.py
csi/blob3d/: __init__.py  tracker.py
csi/presence/: __init__.py  detector.py  monitor_cli.py
csi/quadrants/: __init__.py  blob_live.py  regressor.py  ws_server.py
csi/services/: __init__.py  health_check.py  metrics.py  orchestrator.py
csi/signal/: __init__.py  bvp.py  (+8 more)
docs/: API.md  ARCHITECTURE.md  CAPABILITIES.md  HARDWARE_SETUP.md  HOW_IT_WORKS.md  MULTI_AP_RUVIEW.md  REPORT.md  TESTING.md  TROUBLESHOOTING.md  VISION.md  arduino_cloud_integration.md  csi-frame-format.md  demo_24h_plan.md  hardware-support.md  shopping_list.md  what-was-cut.md
esp32_csi_bridge/: esp32_csi_bridge.ino
esp32_csi_collector/: esp32_csi_collector.ino  secrets.h.example
esp32_csi_firmware/: esp32_csi_firmware.ino  secrets.h  secrets.h.example
experimental/: diag_paths.py  discover_macs.py  run_local.sh
experiments/: README.md
feasibility_test/: feasibility_test.ino
host-rust/: Cargo.toml
host-rust/crates/ifi-cli/: Cargo.toml
host-rust/crates/ifi-cli/src/: main.rs
host-rust/crates/ifi-core/: Cargo.toml
host-rust/crates/ifi-core/src/: lib.rs
host-rust/crates/ifi-dsp/: Cargo.toml
host-rust/crates/ifi-dsp/src/: lib.rs
host-rust/crates/ifi-transport/: Cargo.toml
host-rust/crates/ifi-transport/src/: lib.rs
mapping/: README.md  classroom_heatmap.html  radar_3d.html  room_3d.html  room_map.html  room_map_3d.html  room_mapper.py  room_server.py  ui.html
rssi/: calibrate_presence.py  enhanced_presence.py  rssi_ml.py
test_esp32_uart/: test_esp32_uart.ino
tests/: conftest.py  test_blob3d.py  test_csi_processor.py  test_csi_tools.py  test_integration.py  test_ml_classifiers.py  test_multi_ap.py  test_position_regressor.py  test_presence.py  test_quadrants.py  test_room_mapper.py  test_ruview_features.py  test_seat_mapper.py
tools/: inject_radar3d_frames.py
(+21 files in other folders)
