[workspace]
resolver = "2"
members = [
    "crates/ifi-core",
    "crates/ifi-dsp",
    "crates/ifi-transport",
    "crates/ifi-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/IF-I-WIFI"
rust-version = "1.75"

[workspace.dependencies]
ifi-core      = { path = "crates/ifi-core",      version = "0.1.0" }
ifi-dsp       = { path = "crates/ifi-dsp",       version = "0.1.0" }
ifi-transport = { path = "crates/ifi-transport", version = "0.1.0" }

# Deliberately small dependency set. No tokio, no ndarray, no serde_json
# in the hot path, no async runtime, no ML libs. Only:
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
