[package]
name = "ifi-dsp"
description = "Robust streaming DSP primitives (Hampel filter, MAD, coherence gate) for IF I WIFI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ifi-core = { workspace = true }

[dev-dependencies]
