[package]
name = "ifi-transport"
description = "Blocking UDP receiver + bounded ring buffer for IF I WIFI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ifi-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
